✨ Add modern cross-platform development tooling
- Add requirements.txt files for different installation types
- Add Python-based task runner (scripts/tasks.py)
- Add cross-platform development scripts (dev.py, dev.sh, dev.bat)
- Add setup_dev.py for automated development environment setup
- Update pyproject.toml with proper optional dependencies
- Update README.md with new development workflow
- Replace Makefile with modern Python tooling for better cross-platform support

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,9 +62,17 @@ generators-pdf = [
 generators-advanced = [
     "markdown>=3.5.0",
     "python-docx>=0.8.11",
+    "python-markdown-math>=0.8",
 ]
 all = [
-    "wara9a[dev,connectors-github,connectors-jira,connectors-azure,generators-pdf,generators-advanced]",
+    "pygithub>=1.58.0",
+    "jira>=3.4.0", 
+    "azure-devops>=7.0.0",
+    "reportlab>=4.0.0",
+    "weasyprint>=59.0",
+    "markdown>=3.5.0",
+    "python-docx>=0.8.11",
+    "python-markdown-math>=0.8",
 ]
 
 [project.urls]
@@ -75,6 +83,7 @@ Issues = "https://github.com/elhajjaji/wara9a/issues"
 
 [project.scripts]
 wara9a = "wara9a.cli.main:main"
+wara9a-dev = "scripts.tasks:main"
 
 [tool.black]
 line-length = 88
