Fix remaining French text in multiple files
- Complete translation of local_files.py connector
- Fix French docstrings in connector_registry.py
- Translate HTML generator comments and methods
- Update template_engine.py French content
- Contributor: AbdERRAHMAN EL HAJJAJI

Part 2 of comprehensive French to English translation.

--- a/examples/wara9a_self_doc.yml
+++ b/examples/wara9a_self_doc.yml
@@ -1,4 +1,4 @@
-# Configuration pour auto-documenter le projet Wara9a
+# Configuration to auto-document the Wara9a project
 # Real usage example on official repository
 
 project:
