Complete final French to English translation - Phase 3
COMPREHENSIVE CLEANUP:
- Translated ALL docstrings in core modules (project.py, config.py, template_engine.py)
- Converted ALL French logger messages to English throughout codebase
- Translated GitHub connector error messages and documentation
- Updated connector_base.py and connector_registry.py docstrings
- Translated dependencies.py error messages and documentation
- Fixed YAML example files comments
- Standardized all code documentation to English

MASSIVE TRANSLATION EFFORT:
- Over 150+ French strings converted to English
- Covered: docstrings, comments, error messages, log messages, field descriptions
- Files updated: 8 core Python modules + example configurations

This completes the full internationalization of the Wara9a project.
All code, documentation, and user-facing messages are now in English.

Contributor: AbdERRAHMAN EL HAJJAJI
Repository: https://github.com/elhajjaji/wara9a.git

--- a/examples/wara9a_example.yml
+++ b/examples/wara9a_example.yml
@@ -1,4 +1,4 @@
-# Configuration exemple pour un projet Wara9a
+# Example configuration for a Wara9a project
 # This file can be used as a base for your projects
 
 project:
