--- a/examples/wara9a_example.yml
+++ b/examples/wara9a_example.yml
@@ -2,29 +2,29 @@
 # This file can be used as a base for your projects
 
 project:
-  name: "Mon Projet Awesome"
+  name: "My Awesome Project"
   version: "1.0.0"
-  description: "Un projet incroyable avec documentation automatique"
-  author: "Mon Nom"
+  description: "An amazing project with automatic documentation"
+  author: "My Name"
   license: "MIT"
-  homepage: "https://github.com/mon-org/mon-projet"
-  repository: "https://github.com/mon-org/mon-projet.git"
+  homepage: "https://github.com/my-org/my-project"
+  repository: "https://github.com/my-org/my-project.git"
 
 sources:
   # GitHub source - requires a token for private repositories
   - type: github
-    name: "Repository principal"
-    repo: "mon-org/mon-projet"
-    token: "${GITHUB_TOKEN}"  # Variable d'environnement
+    name: "Main repository"
+    repo: "my-org/my-project"
+    token: "${GITHUB_TOKEN}"  # Environment variable
     branch: "main"
     max_commits: 50
     max_issues: 100
     include_forks: false
     enabled: true
 
-  # Source fichiers locaux - toujours disponible
+  # Local files source - always available
   - type: local_files
-    name: "Documentation locale"
+    name: "Local documentation"
     path: "."
     patterns:
       - "README.md"
@@ -43,14 +43,14 @@ templates:
       show_badges: true
       include_toc: true
       
-  # Changelog automatique
+  # Automatic changelog
   - name: changelog
     output: "CHANGELOG_auto.md"
     enabled: true
     variables:
       group_by_type: true
       
-  # Notes de version
+  # Release notes
   - name: release_notes
     output: "RELEASE_NOTES.md"
     enabled: false  # Disabled by default
@@ -70,11 +70,11 @@ output:
     - html
   clean_before: true
 
-# Configuration globale
+# Global configuration
 log_level: "INFO"
 parallel: true
 cache_enabled: true
-cache_ttl: 3600  # 1 heure
+cache_ttl: 3600  # 1 hour
 
 # Automatic dependency management
 auto_install_deps: true  # Automatically installs missing dependencies
